# cfond-asp

./: .gitignore  BENCHMARKING.md  README.md  pyproject.toml  requirements.txt  requirements_versions.txt  setup-OLD.py  setup.py
benchmarking/analysis/: FondASPBackboneSize.ipynb  FondASPBackboneTime.ipynb  asp_coverage.csv  ck_analysis.R  ck_results.csv
benchmarking/code/: benchmark.py  generate_instances_csv.py  monitor.py  report.py  task.py
benchmarking/configs/: config.json
benchmarking/metaconfigs/: benchmarking-acrobatics-kb-reg.ini  benchmarking-kb.ini  benchmarking-miner-kb.ini  benchmarking-triangle-kb-reg.ini  benchmarking-triangle-kb.ini  benchmarking-undo-reg.ini  benchmarking.ini
benchmarking/problems/: instances.csv  instances_small.csv  instances_tiny.csv
benchmarking/src/: benchmark.py  domain_spec.py  generate_instances_csv.py  report.py  task.py
benchmarks/earth_observation/: domain.pddl
cfondasp/: __init__.py  __main__ copy.py  __main__.py  __verify__.py  __version__.py  main.py
cfondasp/asp/: controller-common.lp  controller-fondsat.lp  controller-regression.lp  controller-strong.lp  controller-weak.lp
cfondasp/base/: config.py  elements.py  (+1 more)
configs/: blocksworld.ini  concepts.ini  doors.ini  earth-obs.ini  elevators.ini  first-resp.ini  islands.ini  linear-tireworld-refuel.ini  linear-tireworld.ini  miner.ini  tireworld-truck.ini  tireworld.ini  zenotravel.ini
experiments/: EXPERIMENT.md  README.md  analysis.ipynb  analysis_benchexec.ipynb  coverage_plots.ipynb  plots.R  process_benchexec.ipynb  requirements.txt
src/: cfondasp
(+851 files in other folders)
